<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group_info_ll"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/group_number"
        style="@style/TaskListText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/group_number"/>

    <TextView
        android:id="@+id/group_person_name"
        style="@style/TaskListText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/group_person_name"/>

    <TextView
        android:id="@+id/group_person_id"
        style="@style/TaskListText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/group_person_id"/>

    <TextView
        android:id="@+id/group_temperature"
        style="@style/TaskListText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/group_temperature"/>

    <TextView
        android:id="@+id/group_longitude"
        style="@style/TaskListText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/group_longitude"/>

    <TextView
        android:id="@+id/group_latitude"
        style="@style/TaskListText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/group_latitude"/>


    <TextView
        android:id="@+id/group_alarm_state"
        style="@style/TaskListText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/group_alarm_state"/>

<!--    <LinearLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_weight="2"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingBottom="10dp"-->
<!--        android:paddingTop="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/task_detail"-->
<!--            style="@style/TaskListOperateText"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/task_detail_bg"-->
<!--            android:text="详情"/>-->

<!--        <TextView-->
<!--            android:id="@+id/task_record"-->
<!--            style="@style/TaskListOperateText"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/task_record_bg"-->
<!--            android:text="记录"/>-->

<!--        <TextView-->
<!--            android:id="@+id/task_upload"-->
<!--            style="@style/TaskListOperateText"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/task_upload_bg"-->
<!--            android:text="上传"/>-->

<!--    </LinearLayout>-->


</LinearLayout>